added a lot of things for making it into an app